--- a/cocokkan_data_lama.ipynb
+++ b/cocokkan_data_lama.ipynb
@@ -9,26 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Database Email Semester Sebelumnya Per Angkatan\n",
+    "# File CSV Nilai terbaru saat ini\n",
     "data1 =  pd.read_csv('Angkatan 2023\\Pendidikan_Agama_Softskill.csv')\n",
     "\n",
-    "# Database Email terbaru di Semester Sekarang (Bisa saja lebih dari dua karena 2023 sudah ada 4 jurusan)\n",
+    "# File Excel berisi database Email yang telah direkap di sebelumnya (Bisa saja lebih dari 2 karena 2023 sudah ada 4 jurusan)\n",
     "data2 = pd.read_excel('2023_D3MI_daftar_mahasiswa.xlsx')\n",
     "data3 = pd.read_excel('2023_D3TI_daftar_mahasiswa.xlsx')\n",
-    "# data4 = pd.read_excel('2023_D4SIB_daftar_mahasiswa.xlsx')\n",
-    "# data5 = pd.read_excel('2023_D4TIIN_daftar_mahasiswa.xlsx')"
+    "#data4 = pd.read_excel('2023_D4SIB_daftar_mahasiswa.xlsx')\n",
+    "#data5 = pd.read_excel('2023_D4TRII_daftar_mahasiswa.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -61,75 +61,76 @@
        "      <td>adilfon2002@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
+       "      <td>ayuasary64@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>derminamaharaja04@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>3</th>\n",
        "      <td>wahyusaputroeko538@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
        "      <td>whyuuuputro@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>giawaerika66@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>otonigiawa999@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>ayuenjeli2002@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>yurniwaruwu2023@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>48</th>\n",
-       "      <td>muhammadfahrian1997@gmail.com</td>\n",
+       "      <td>siskahia54@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>arismahmud300@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>hermangea80@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>rindasiahaan18@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>siahaanrinda7@gmail.com</td>\n",
+       "      <td>alfisaldi3@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>128 rows × 1 columns</p>\n",
+       "<p>170 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Email\n",
-       "0           adilfon2002@gmail.com\n",
-       "4     derminamaharaja04@gmail.com\n",
-       "7    wahyusaputroeko538@gmail.com\n",
-       "8           whyuuuputro@gmail.com\n",
-       "11         giawaerika66@gmail.com\n",
-       "..                            ...\n",
-       "48  muhammadfahrian1997@gmail.com\n",
-       "50        arismahmud300@gmail.com\n",
-       "51          hermangea80@gmail.com\n",
-       "52       rindasiahaan18@gmail.com\n",
-       "53        siahaanrinda7@gmail.com\n",
+       "                           Email\n",
+       "0          adilfon2002@gmail.com\n",
+       "1           ayuasary64@gmail.com\n",
+       "2    derminamaharaja04@gmail.com\n",
+       "3   wahyusaputroeko538@gmail.com\n",
+       "4          whyuuuputro@gmail.com\n",
+       "..                           ...\n",
+       "45       otonigiawa999@gmail.com\n",
+       "46       ayuenjeli2002@gmail.com\n",
+       "47     yurniwaruwu2023@gmail.com\n",
+       "48          siskahia54@gmail.com\n",
+       "50          alfisaldi3@gmail.com\n",
        "\n",
-       "[128 rows x 1 columns]"
+       "[170 rows x 1 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Gabungkan data semua kelas di semester sekarang dan drop nilai NaN\n",
-    "frames = [data2, data3]  #bisa tambahkan lebih dari 2 kelas\n",
+    "frames = [data2, data3]  #JIKA ADA 2 kelas\n",
+    "#frames = [data2, data3, data4, data5]  #JIKA ADA 4 kelas\n",
     "result = pd.concat(frames)\n",
     "result = result[['Email']].dropna()\n",
     "result"
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -175,63 +176,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>agustinusgulo489@gmail.com</td>\n",
+       "      <td>sinagaafnika@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>lex251202@gmail.com</td>\n",
+       "      <td>hardjaagus@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>channelaljunlaia@gmail.com</td>\n",
+       "      <td>agustinusgulo71@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>lewi1209natalia@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>niki150902@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
+       "      <th>167</th>\n",
        "      <td>laolimawati@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
+       "      <th>168</th>\n",
        "      <td>rianitamba762@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133</th>\n",
+       "      <th>169</th>\n",
        "      <td>pasaribusaul0@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>tetymardianabawamenewi@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>ypasaribu518@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>132 rows × 1 columns</p>\n",
+       "<p>170 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Email\n",
-       "2     adindanofitri12@gmail.com\n",
-       "3        afnisinaga50@gmail.com\n",
-       "4    agustinusgulo489@gmail.com\n",
-       "5           lex251202@gmail.com\n",
-       "6    channelaljunlaia@gmail.com\n",
-       "..                          ...\n",
-       "129   lewi1209natalia@gmail.com\n",
-       "130        niki150902@gmail.com\n",
-       "131       laolimawati@gmail.com\n",
-       "132     rianitamba762@gmail.com\n",
-       "133     pasaribusaul0@gmail.com\n",
+       "                                Email\n",
+       "2           adindanofitri12@gmail.com\n",
+       "3              afnisinaga50@gmail.com\n",
+       "4              sinagaafnika@gmail.com\n",
+       "5                hardjaagus@gmail.com\n",
+       "6           agustinusgulo71@gmail.com\n",
+       "..                                ...\n",
+       "167             laolimawati@gmail.com\n",
+       "168           rianitamba762@gmail.com\n",
+       "169           pasaribusaul0@gmail.com\n",
+       "170  tetymardianabawamenewi@gmail.com\n",
+       "171            ypasaribu518@gmail.com\n",
        "\n",
-       "[132 rows x 1 columns]"
+       "[170 rows x 1 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -280,35 +281,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>rindusimangunsongrindusimangun@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sellyzllahagu@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>sopiantisaleleubaja@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>wilisdohare@gmail.com</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 Email Baru\n",
-       "0  rindusimangunsongrindusimangun@gmail.com\n",
-       "1                   sellyzllahagu@gmail.com\n",
-       "2             sopiantisaleleubaja@gmail.com\n",
-       "3                     wilisdohare@gmail.com"
+       "Empty DataFrame\n",
+       "Columns: [Email Baru]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,10 +307,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#not_in_result_values.to_excel(\"new_data.xlsx\")"
+   ]
   }
  ],
  "metadata": {
@@ -346,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
