--- a/cocokkan_data_lama.ipynb
+++ b/cocokkan_data_lama.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,18 +17,18 @@
     "import numpy as np\n",
     "\n",
     "# File CSV Nilai terbaru saat ini\n",
-    "data1 =  pd.read_csv('Angkatan 2023\\Pendidikan_Agama_Softskill.csv')\n",
+    "data1 =  pd.read_csv('Angkatan 2024\\ALGORITMA_DAN_PEMROGRAMAN_II.csv')\n",
     "\n",
     "# File Excel berisi database Email yang telah direkap di sebelumnya (Bisa saja lebih dari 2 karena 2023 sudah ada 4 jurusan)\n",
-    "data2 = pd.read_excel('2023_D3MI_daftar_mahasiswa.xlsx')\n",
-    "data3 = pd.read_excel('2023_D3TI_daftar_mahasiswa.xlsx')\n",
+    "data2 = pd.read_excel('2024_daftar_mahasiswa.xlsx')\n",
+    "#data3 = pd.read_excel('2023_D3TI_daftar_mahasiswa.xlsx')\n",
     "#data4 = pd.read_excel('2023_D4SIB_daftar_mahasiswa.xlsx')\n",
     "#data5 = pd.read_excel('2023_D4TRII_daftar_mahasiswa.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -58,78 +58,79 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>adilfon2002@gmail.com</td>\n",
+       "      <td>cindilase21@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ayuasary64@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>derminamaharaja04@gmail.com</td>\n",
+       "      <td>jernihzebua443@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>wahyusaputroeko538@gmail.com</td>\n",
+       "      <td>srysiringoringo@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>whyuuuputro@gmail.com</td>\n",
+       "      <td>sipayungtirawati@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>yunitatumanggor05.uli@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>otonigiawa999@gmail.com</td>\n",
+       "      <th>266</th>\n",
+       "      <td>hermantotel24@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>ayuenjeli2002@gmail.com</td>\n",
+       "      <th>267</th>\n",
+       "      <td>afininur081@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>yurniwaruwu2023@gmail.com</td>\n",
+       "      <th>268</th>\n",
+       "      <td>naibahovramita@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>siskahia54@gmail.com</td>\n",
+       "      <th>269</th>\n",
+       "      <td>harnumsimarmata485@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>alfisaldi3@gmail.com</td>\n",
+       "      <th>272</th>\n",
+       "      <td>jupensihombing83@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>170 rows × 1 columns</p>\n",
+       "<p>175 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Email\n",
-       "0          adilfon2002@gmail.com\n",
-       "1           ayuasary64@gmail.com\n",
-       "2    derminamaharaja04@gmail.com\n",
-       "3   wahyusaputroeko538@gmail.com\n",
-       "4          whyuuuputro@gmail.com\n",
-       "..                           ...\n",
-       "45       otonigiawa999@gmail.com\n",
-       "46       ayuenjeli2002@gmail.com\n",
-       "47     yurniwaruwu2023@gmail.com\n",
-       "48          siskahia54@gmail.com\n",
-       "50          alfisaldi3@gmail.com\n",
+       "                               Email\n",
+       "0              cindilase21@gmail.com\n",
+       "1           jernihzebua443@gmail.com\n",
+       "3          srysiringoringo@gmail.com\n",
+       "4         sipayungtirawati@gmail.com\n",
+       "5    yunitatumanggor05.uli@gmail.com\n",
+       "..                               ...\n",
+       "266          hermantotel24@gmail.com\n",
+       "267            afininur081@gmail.com\n",
+       "268         naibahovramita@gmail.com\n",
+       "269     harnumsimarmata485@gmail.com\n",
+       "272       jupensihombing83@gmail.com\n",
        "\n",
-       "[170 rows x 1 columns]"
+       "[175 rows x 1 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Gabungkan data semua kelas di semester sekarang dan drop nilai NaN\n",
-    "frames = [data2, data3]  #JIKA ADA 2 kelas\n",
+    "frames = [data2]  #JIKA ADA 1 kelas\n",
+    "#frames = [data2, data3]  #JIKA ADA 2 kelas\n",
     "#frames = [data2, data3, data4, data5]  #JIKA ADA 4 kelas\n",
     "result = pd.concat(frames)\n",
     "result = result[['Email']].dropna()\n",
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -168,71 +169,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>adindanofitri12@gmail.com</td>\n",
+       "      <td>anjelinazega27@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>afnisinaga50@gmail.com</td>\n",
+       "      <td>pkuoppo34@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>sinagaafnika@gmail.com</td>\n",
+       "      <td>adelubishidayani@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>hardjaagus@gmail.com</td>\n",
+       "      <td>alfansgiawa57@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>agustinusgulo71@gmail.com</td>\n",
+       "      <td>ambrosiusleaumanai@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>laolimawati@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>168</th>\n",
-       "      <td>rianitamba762@gmail.com</td>\n",
+       "      <td>rendijuanj@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>169</th>\n",
-       "      <td>pasaribusaul0@gmail.com</td>\n",
+       "      <td>srysiringoringo@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170</th>\n",
-       "      <td>tetymardianabawamenewi@gmail.com</td>\n",
+       "      <td>tegarrisgidion@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171</th>\n",
-       "      <td>ypasaribu518@gmail.com</td>\n",
+       "      <td>yehezkielkudadiri@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>yogisaputratobing7@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>170 rows × 1 columns</p>\n",
+       "<p>171 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                Email\n",
-       "2           adindanofitri12@gmail.com\n",
-       "3              afnisinaga50@gmail.com\n",
-       "4              sinagaafnika@gmail.com\n",
-       "5                hardjaagus@gmail.com\n",
-       "6           agustinusgulo71@gmail.com\n",
-       "..                                ...\n",
-       "167             laolimawati@gmail.com\n",
-       "168           rianitamba762@gmail.com\n",
-       "169           pasaribusaul0@gmail.com\n",
-       "170  tetymardianabawamenewi@gmail.com\n",
-       "171            ypasaribu518@gmail.com\n",
+       "                            Email\n",
+       "2        anjelinazega27@gmail.com\n",
+       "3             pkuoppo34@gmail.com\n",
+       "4      adelubishidayani@gmail.com\n",
+       "5         alfansgiawa57@gmail.com\n",
+       "6    ambrosiusleaumanai@gmail.com\n",
+       "..                            ...\n",
+       "168          rendijuanj@gmail.com\n",
+       "169     srysiringoringo@gmail.com\n",
+       "170      tegarrisgidion@gmail.com\n",
+       "171   yehezkielkudadiri@gmail.com\n",
+       "172  yogisaputratobing7@gmail.com\n",
        "\n",
-       "[170 rows x 1 columns]"
+       "[171 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,17 +282,25 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fikayourbae346@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>namadepannamabelakang2387@gmail.com</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Email Baru]\n",
-       "Index: []"
+       "                            Email Baru\n",
+       "0             fikayourbae346@gmail.com\n",
+       "1  namadepannamabelakang2387@gmail.com"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +316,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Yourbae</td>\n",
+       "      <td>Fika</td>\n",
+       "      <td>fikayourbae346@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>S</td>\n",
+       "      <td>namadepannamabelakang2387@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Last Name First Name                                Email\n",
+       "48     Yourbae       Fika             fikayourbae346@gmail.com\n",
+       "119  Alexander          S  namadepannamabelakang2387@gmail.com"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Details of the name database not contain in the old database\n",
+    "temp = data1.rename(columns={'Email Address': 'Email'}).drop(data1.columns[3:], axis=1)\n",
+    "filtered_df = temp[temp['Email'].isin(not_in_result_values['Email Baru'])]\n",
+    "filtered_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
